[package]
name = "time_wall"
version = "0.1.0"
authors = ["Daniil Glushchenko <daniil.glushchenko@mytona.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.7"
argparse = "0.2.2"
imageproc = "0.21.0"
chrono = "0.4.13"
rusttype = "0.9.2"
